apps/lab-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-web
  namespace: lab-web
spec:
  type: ClusterIP
  selector:
    app: lab-web
  ports:
    - name: http
      port: 80
      targetPort: 80
