apps/lab-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab-web-ingress
  namespace: lab-web
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - lab-web.k8s.lab
      secretName: lab-web-tls
  rules:
    - host: lab-web.k8s.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lab-web
                port:
                  number: 80
